Added method to improve DependsOn