@@ -2,13 +2,9 @@ package exel.engine.expressions.imp;
 
 import exel.engine.expressions.api.Expression;
 import exel.engine.expressions.imp.Math.*;
-import exel.engine.expressions.imp.String.UpperCaseExpression;
 import exel.engine.spreadsheet.cell.api.CellType;
 
-import java.util.AbstractMap;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Stack;
+import java.util.*;
 
 public enum FunctionParser
 {
@@ -19,22 +15,16 @@ public enum FunctionParser
                 {
                     // validations of the function. it should have exactly one argument
                     if (arguments.size() != 1)
-                    {
                         throw new IllegalArgumentException("Invalid number of arguments for IDENTITY function. Expected 1, but got " + arguments.size());
-                    }
 
                     // all is good. create the relevant function instance
                     String actualValue = arguments.get(0).trim();
                     if (isBoolean(actualValue))
-                    {
                         return new IdentityExpression(Boolean.parseBoolean(actualValue), CellType.BOOLEAN);
-                    } else if (isNumeric(actualValue))
-                    {
+                    else if (isNumeric(actualValue))
                         return new IdentityExpression(Double.parseDouble(actualValue), CellType.NUMERIC);
-                    } else
-                    {
+                    else
                         return new IdentityExpression(actualValue, CellType.STRING);
-                    }
                 }
 
                 private boolean isBoolean(String value)
@@ -166,7 +156,10 @@ public enum FunctionParser
             String functionName = topLevelParts.get(0).trim().toUpperCase();
 
             //remove the first element from the array
-            topLevelParts.remove(0);
+            topLevelParts.removeFirst();
+
+            //Idea: topLevelParts now has either cells, functions, or numbers.
+            //If it's a cell, it should be added to the "dependsOn" list given in the method.
             return FunctionParser.valueOf(functionName).parse(topLevelParts);
         }
 
@@ -176,38 +169,67 @@ public enum FunctionParser
 
     private static List<String> parseMainParts(String input)
     {
-        List<String> parts = new ArrayList<>();
+        List<String> parts = new LinkedList<>();
         StringBuilder buffer = new StringBuilder();
         Stack<Character> stack = new Stack<>();
 
         for (char c : input.toCharArray())
         {
             if (c == '{')
-            {
                 stack.push(c);
-            } else if (c == '}')
-            {
+            else if (c == '}')
                 stack.pop();
-            }
 
             if (c == ',' && stack.isEmpty())
             {
                 // If we are at a comma and the stack is empty, it's a separator for top-level parts
                 parts.add(buffer.toString().trim());
                 buffer.setLength(0); // Clear the buffer for the next part
-            } else
-            {
-                buffer.append(c);
             }
+            else
+                buffer.append(c);
         }
 
         // Add the last part
         if (buffer.length() > 0)
-        {
             parts.add(buffer.toString().trim());
-        }
 
         return parts;
+    }
+
+    public static List<String> getCellsInString(String input) {
+        List<String> cellsList = null;
+
+        if (input.startsWith("{") && input.endsWith("}"))
+        {
+            String functionContent = input.substring(1, input.length() - 1);
+            cellsList = parseMainParts(functionContent);
+
+            //remove all the non cell strings from the list
+            cellsList.removeIf(topLevelPart -> !isStringACellCoordinate(topLevelPart));
+        }
+        else if (isStringACellCoordinate(input))
+        {
+            cellsList = new LinkedList<>();
+            cellsList.add(input);
+        }
+
+        return cellsList;
+    }
+
+    private static Boolean isStringACellCoordinate(String input) {
+        char[] strAsArr = input.toCharArray();
+
+        if (!Character.isUpperCase(strAsArr[0]))
+            return false;
+
+        for (int i = 1; i < strAsArr.length; i++)
+        {
+            if (!Character.isDigit(strAsArr[i]))
+                return false;
+        }
+
+        return true;
     }
 
     private static AbstractMap.SimpleEntry<Expression, Expression> areArgumentsValid(List<String> arguments)
@@ -224,9 +246,8 @@ public enum FunctionParser
 
         // more validations on the expected argument types
         if (!left.getFunctionResultType().equals(CellType.NUMERIC) || !right.getFunctionResultType().equals(CellType.NUMERIC))
-        {
-            throw new IllegalArgumentException("Invalid argument types for MINUS function. Expected NUMERIC, but got " + left.getFunctionResultType() + " and " + right.getFunctionResultType());
-        }
+            throw new IllegalArgumentException("Invalid argument types for MINUS function. " +
+                    "Expected NUMERIC, but got " + left.getFunctionResultType() + " and " + right.getFunctionResultType());
 
         return new AbstractMap.SimpleEntry<>(left, right);
     }
